hw07/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment-billing
  labels:
    app: hw-app-k8s-a

spec:
  replicas: 1
  selector:
    matchLabels:
      env: hw-billing
  template:
    metadata:
      labels:
        env: hw-billing
    spec:
      containers:
      - name: hw07-billing
        image: pisklovcor/hw-07-app-billing-docker:dockerfile
        ports:
          - containerPort: 8001
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment-notice
  labels:
    app: hw-app-k8s-s

spec:
  replicas: 1
  selector:
    matchLabels:
      env: hw-notice
  template:
    metadata:
      labels:
        env: hw-notice
    spec:
      containers:
        - name: hw07-notice
          image: pisklovcor/hw-07-app-notice-docker:dockerfile
          ports:
            - containerPort: 8003
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment-order
  labels:
    app: hw-app-k8s-s

spec:
  replicas: 1
  selector:
    matchLabels:
      env: hw-order
  template:
    metadata:
      labels:
        env: hw-order
    spec:
      containers:
        - name: hw07-order
          image: pisklovcor/hw-07-app-order-docker:dockerfile
          ports:
            - containerPort: 8002
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: hw-postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      env: postgres-app
  template:
    metadata:
      labels:
        env: postgres-app
    spec:
      containers:
        - name  : postgres-13
          image : postgres:13.3
          ports :
            - containerPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jms-broker
  labels:
    app: hw-jms-broker

spec:
  replicas: 1
  selector:
    matchLabels:
      env: jms-broker-app
  template:
    metadata:
      labels:
        env: jms-broker-app
    spec:
      containers:
        - name  : ms-broker
          image : vromero/activemq-artemis:2.10.1
          ports :
            - containerPort: 61616
